Fix Initiative overflowing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,9 @@
 html,
 body,
-#__next {
+#root {
   width: 100%;
   height: 100%;
-  max-height: 100%;
+  max-height: 100vh;
 }
 
 body::-webkit-scrollbar {
